<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="time_On">On</string>
    <string name="time_Off">Off</string>
    <string name="connectbt">Connect Bluetooth</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is :</string>
    <string name="ConnecReady">Ready</string>
</resources>