<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >




        <TimePicker
            android:id="@+id/timepicker"
            android:layout_width="match_parent"
            android:layout_height="347dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"></TimePicker>


        <Button
            android:id="@+id/AlarmOn"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginLeft="63dp"
            android:layout_marginEnd="226dp"
            android:layout_marginRight="226dp"
            android:layout_marginBottom="128dp"
            android:text="@string/time_On" />

        <Button
            android:id="@+id/AlarmOff"
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="212dp"
            android:layout_marginLeft="212dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="76dp"
            android:layout_marginBottom="127dp"
            android:text="@string/time_Off" />

    <Button
        android:id="@+id/btnCon"
        android:layout_width="405dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="73dp"
        android:text="@string/connectbt" />


        <Button
            android:id="@+id/btnReady"
            android:layout_width="405dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCon"
            android:layout_marginTop="-56dp"
            android:text="@string/ConnecReady" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="113dp"
            android:layout_height="39dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="232dp"
            android:layout_marginRight="232dp"
            android:layout_marginBottom="182dp"
            android:text="@string/time_current" />

        <TextView
            android:id="@+id/update_text"
            android:layout_width="111dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginBottom="180dp"
            android:text="------" />



</RelativeLayout>